--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="contact-col">
-            <form action="http://formspree.io/vickings225@gmail.com"method="POST">
+<form action= "form-handler.php"method="POST">
               <input type="email"name="email"placeholder="Email"required>
               <input type="name"name="name"placeholder="Name"required>
               <textarea rows="8"name="message"placeholder="Message"required></textarea>
